--- a/package.json
+++ b/package.json
@@ -1,46 +1,11 @@
 {
-	"_from": "perf_hooks@0.0.1",
-	"_id": "perf_hooks@0.0.1",
-	"_inBundle": false,
-	"_integrity": "sha512-qG/D9iA4KDme+KF4vCObJy6Bouu3BlQnmJ8jPydVPm32NJBD9ZK1ZNgXSYaZKHkVC1sKSqUiLgFvAZPUiIEnBw==",
-	"_location": "/perf_hooks",
-	"_phantomChildren": {},
-	"_requested": {
-		"type": "version",
-		"registry": true,
-		"raw": "perf_hooks@0.0.1",
-		"name": "perf_hooks",
-		"escapedName": "perf_hooks",
-		"rawSpec": "0.0.1",
-		"saveSpec": null,
-		"fetchSpec": "0.0.1"
-	},
-	"_requiredBy": [
-		"/"
-	],
-	"_shasum": "253e7e18b71fcc0390fd3afb2cd7cf1685df040c",
-	"_spec": "perf_hooks@0.0.1",
-	"_where": "/Users/apple/Documents/job/gooLove",
 	"author": {
-		"name": "Matteo Collina",
-		"email": "hello@matteocollina.com"
+		"name": "fengxiaozi123",
+		"email": ""
 	},
-	"bugs": {
-		"url": "https://github.com/mcollina/perf_hooks/issues"
-	},
-	"bundleDependencies": false,
-	"deprecated": false,
-	"description": "placeholder for Node core module",
-	"homepage": "git+https://github.com/fengxiaozi123/perf_hooks.git#readme",
+	"homepage": "git+https://github.com/fengxiaozi123/perf_hooks.git",
 	"license": "MIT",
 	"main": "index.js",
 	"name": "perf_hooks",
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/fengxiaozi123/perf_hooks.git"
-	},
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
 	"version": "0.0.1"
 }
